@@ -8,7 +8,7 @@ Name:		globus-xio
 
 
 %global _name %(tr - _ <<< %{name})
-Version:	5.14
+Version:	5.15
 Release:	1%{?dist}
 Vendor:	        Globus Support
 Summary:	Globus Toolkit - Globus XIO Framework
@@ -169,6 +169,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/*/*
 
 %changelog
+* Mon Mar 20 2017 Globus Toolkit <support@globus.org> - 5.15-1
+- Don't rely on globus_error_put(NULL) to be GLOBUS_SUCCESS
+
 * Fri Nov 04 2016 Globus Toolkit <support@globus.org> - 5.14-1
 - Don't crash when GLOBUS_TCP_PORT_RANGE has the same min and max
 
