@@ -1,3 +1,9 @@
+globus-xio (5.15-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't rely on globus_error_put(NULL) to be GLOBUS_SUCCESS
+
+ -- Globus Toolkit <support@globus.org>  Mon, 20 Mar 2017 15:21:01 -0400
+
 globus-xio (5.14-1+gt6.@distro@) @distro@; urgency=low
 
   * Don't crash when GLOBUS_TCP_PORT_RANGE has the same min and max
